# py-typewriter

./: .gitignore  LICENSE  README.md  README_cn.md  pyproject.toml
src/typewriter/: __init__.py
